--- a/amazon1.css
+++ b/amazon1.css
@@ -10,7 +10,7 @@
     display: flex;
 }
 .logo{
-    background-image: url(amazon.jpg);
+    background-image: url(amzon.jpg);
     background-size: 100%;
     height: 60px;
     width: 60px;
@@ -44,7 +44,7 @@ border: white 2px solid;
     align-self: center;
     margin-left: 29px;
     height: 50px;
-    width: 650px;
+    width: 800px;
 }
 
 .navbar-select{
@@ -79,4 +79,59 @@ border: white 2px solid;
     align-items: center;
     justify-content: center;
     font-size: 1.3rem;
+}
+/*Right Corner*/
+
+.nav-sidebar{
+    display: flex;
+    justify-content: space-evenly;
+    width: 400px;
+    align-items: center;
+}
+.line1{
+    font-size: 0.8rem;
+    color: white;
+
+
+}
+.nav-line2{
+    font-size: 0.9rem;
+    color: white;
+    font-weight: 700;
+
+}
+.nav-return1{
+    font-size: 0.8rem;
+    color: white;
+}
+.nav-return2{
+    font-size: 0.9rem;
+    color: white;
+    font-weight: 700;
+}
+.nav-cart{
+    color: yellowgreen;
+    font-size: 1.5rem;
+    
+}
+/*Second Row*/
+.navsecond{
+    display: flex;
+    background-color: #474749;
+    height: 40px;
+    align-items: center;
+    padding-left: 10px;
+}
+.icon2{
+color: rgb(0, 255, 21);
+font-size: 1.2rem;
+}
+.icon3{
+color: white;
+font-size: 1rem;
+font-weight: bold;
+}
+.nav2{
+    color: white;
+    margin: auto;
 }
