--- a/amazon1.css
+++ b/amazon1.css
@@ -135,3 +135,68 @@ font-weight: bold;
     color: white;
     margin: auto;
 }
+/*Main section part*/
+.centerpart{
+    background-image: url(back.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 300px;
+}
+.mainbox{
+display: flex;
+background-color: white;
+justify-content: space-evenly;
+}
+.box1{
+    border: solid black 1px;
+    width: 300px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.headset{
+    height: 50%;
+    width: 50%;
+    background-image: url(headsets.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.keyboard{
+    height: 50%;
+    width: 50%;
+    background-image: url(keyboards.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.box2{
+    border: solid black 1px;
+    width: 300px;
+    background-repeat: no-repeat;
+    background-image: url(kirku.jpg);
+    background-size: cover;
+    background-position: center;
+    color: black;
+
+}
+.box3{
+    border: solid black 1px;
+    width: 300px;
+    background-image: url(yarshagumba.jpg);
+    background-size: cover;
+    background-position: center;
+    color: violet;
+
+}
+
+.box4{
+    border: solid black 1px;
+    width: 300px;
+    background-image: url(lambo.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
